[Thomas] Add JWT annotation.
